@@ -40,6 +40,7 @@
 ##
 
 - Building: Added missing prototypes for atlassian_parse_hash function
+- Dictionary Cache: Split long status line into multiple lines to stay < 80 chars
 - Files: Detect and error when users try to use -r with a parameter which is not a file
 - Parameter: Detect and error when users try to use an empty string (length 0) for parameters like --session=
 - Parameter: Detect and error when users try to use a non-digit where a digit is expected
